# embedded_kernel_comparison

./: .gitignore  setenv.sh
benchmark_data_files/: README.md
benchmark_freertos/: .editorconfig  Makefile  not_working.txt
benchmark_freertos/lib/: .mxproject  Makefile  STM32F469NIHx_FLASH.ld  freertos_stm32f469disco_skel.ioc  startup_stm32f469xx.s
benchmark_miosix_linux/: .gitignore  Makefile  README.md
benchmark_miosix_linux/benchmarks/: makefile.inc  makefile_kernel.inc  makefile_linux.inc  makefile_process.inc
benchmark_miosix_linux/patches/: blackpill-configuration.patch  bluepill-configuration.patch
benchmark_miosix_linux/process-launcher/: .gitignore  Makefile  prepare_romfs.sh
benchmark_miosix_linux/stm32f469_images/: automotive_basicmath_linux  automotive_bitcount_linux  automotive_qsort_linux  automotive_susan_linux  consumer_jpeg_linux  consumer_lame_linux  consumer_mad_large_linux  consumer_mad_small_linux  consumer_tiff2bw_linux  consumer_tiff2rgba_linux  consumer_tiffdither_linux  consumer_tiffmedian_linux  consumer_typeset_large_linux  consumer_typeset_small_linux  network_dijkstra_large_linux  network_dijkstra_small_linux  network_patricia_linux  office_ghostscript_linux  office_ispell_large_linux  office_ispell_small_linux  office_rsynth_linux  office_sphinx_linux  office_stringsearch_linux  security_blowfish_linux  security_pgp_linux  security_rijndael_linux  security_sha_linux  telecomm_adpcm_linux  telecomm_crc32_linux  telecomm_fft_linux  telecomm_gsm_linux
benchmark_syscall_linux/: gpio-hammer.c  gpio_hammer_stm32f469
build_linux/: flash_linux.sh
build_linux/configs/: README.md  buildroot_config  busybox_config  linux_config  uclibc_config
security_linux/: Makefile  Readme.txt  exploit_stm32f469
security_miosix/: Makefile  launcher.cpp
security_mpu_freertos/: CMakeLists.txt  FreeRTOSConfig.h  STM32F469NIHx_FLASH.ld  exploit.c  exploit.h  freertos.c  main.c  peripherals.c  peripherals.h  startup_stm32f469xx.S  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  system_stm32f4xx.c
security_mpu_freertos/FreeRTOS/portable/GCC/ARM_CM4_MPU/: port.c
security_mpu_freertos/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_sd.c
security_mpu_freertos/cmake/toolchains/: arm-none-eabi.cmake
(+591 files in other folders)
